Partially fixing showing unnecessary animation on mobile when dialog is closed on load (still scroll flickering on mobile on load is visible)

--- a/packages/themes/core/global.css
+++ b/packages/themes/core/global.css
@@ -2,7 +2,7 @@ html {
   background: var(--sl-color-palette-grey-800);
 
   @media (width <= 600px) and (prefers-reduced-motion: no-preference) {
-    body {
+    &.sl-dialog-leave body {
       animation: sl-dialog-leave 0.2s ease-out forwards;
     }
 
@@ -58,3 +58,4 @@ a[href]:hover {
     translate: 0;
   }
 }
+
